# wireguard-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  deny.toml  flake.nix
.github/workflows/: ci.yml  release.yml
examples/: client.rs  server.rs  userspace.rs
lib/wireguard-nt-back/: LICENSE.txt  README.md
src/: dependencies.rs  error.rs  host.rs  key.rs  lib.rs  net.rs  netlink.rs  peer.rs  utils.rs  wgapi.rs  wgapi_freebsd.rs  wgapi_linux.rs  wgapi_userspace.rs  wgapi_windows.rs  wireguard_interface.rs
src/bsd/: ifconfig.rs  mod.rs  nvlist.rs  route.rs  sockaddr.rs  timespec.rs  wgio.rs
wireguard-nt/include/: wireguard.h
