[package]
name = "wireguard_rs"
version = "0.1.0"
edition = "2021"


[dependencies]
base64 = "0.21"
log = "0.4"
thiserror = "1.0"
tokio = "1.32"
boringtun = { version = "0.4", optional = true }

[dev-dependencies]
x25519-dalek = { version = "2.0", features = [
    "getrandom",
    "static_secrets",
] }

[target.'cfg(target_os = "freebsd")'.dependencies]
nix = { version = "0.27", features = ["ioctl", "socket"] }

[target.'cfg(target_os = "linux")'.dependencies]
netlink-packet-core = "0.7"
netlink-packet-generic = "0.3"
netlink-packet-route = "0.17"
netlink-packet-wireguard = "0.2"
netlink-sys = "0.8"

[profile.release]
lto = "thin"
strip = "symbols"
