[package]
name = "defguard_wireguard_rs"
version = "0.9.0"
edition = "2024"
rust-version = "1.85"
description = "A unified multi-platform high-level API for managing WireGuard interfaces"
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/DefGuard/wireguard-rs"
repository = "https://github.com/DefGuard/wireguard-rs"
keywords = ["wireguard", "network", "vpn"]
categories = ["network-programming"]

[dependencies]
base64 = "0.22"
log = "0.4"
serde = { version = "1.0", features = ["derive"], optional = true }
thiserror = "2.0"
x25519-dalek = { version = "2.0", features = ["getrandom", "static_secrets"] }

[dev-dependencies]
env_logger = "0.11"
serde_test = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[target.'cfg(unix)'.dependencies]
boringtun = { path = "boringtun/boringtun", default-features = false, features = [
    "device",
] }
libc = { version = "0.2", default-features = false }
nix = { version = "0.30", features = ["ioctl", "socket"] }


[target.'cfg(target_os = "windows")'.dependencies]
ipnet = "2.11.0"
windows = { version = "0.62.1", features = [
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
    "Win32_System_Com",
]}
wireguard-nt = "0.5.0"

[target.'cfg(target_os = "linux")'.dependencies]
netlink-packet-core = "0.8"
netlink-packet-generic = "0.4"
netlink-packet-route = "0.25"
netlink-packet-utils = "0.6"
netlink-packet-wireguard = "0.2"
netlink-sys = "0.8"

[features]
default = ["serde"]
check_dependencies = []
serde = ["dep:serde"]

[profile.release]
codegen-units = 1
panic = "abort"
lto = "thin"
strip = "symbols"
